<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eat_us_app</string>
    <string name="fridge_main">나의 냉장고</string>
    <string name="freezer_main">나의 냉동고</string>
    <string name="save_btn">저장</string>
    <string name="addfridge_btn">냉장고재료추가</string>
    <string name="vdate_btn">날짜 설정</string>
    <string name="category_btn">카테고리 바로가기</string>
    <string name="fish">생선</string>
    <string name="nuts">견과류</string>
    <string name="fruit">과일</string>
    <string name="sauce">소스류</string>
    <string name="egg">계란</string>
    <string name="grain">곡류</string>
    <string name="drink">음료수</string>
    <string name="veggie">야채류</string>
    <string name="meat">육류</string>
    <string name="alcohol">주류</string>
    <string name="milk">우유</string>
    <string name="cheese" >치즈</string>
    <string name="oil" >오일</string>
    <string name="name">이름</string>
    <string name="nameinput">식료품이름</string>
    <string name="category">카테고리</string>
    <string name="num">수량</string>
    <string name="vdate">유통기한</string>
    <string name="memo">메모</string>
    <string name="chicken_salad">STEP 1\n닭가슴살은 우유에 10분 정도 담가두었다가 건져 낸 후, 물에 헹궈 물기를 제거하고 밑간 재료에 10분간 재워주세요.\n\nSTEP 2\n로메인과 라디치오는 먹기 좋은 크기로 자르고, 찬물에 담갔다가 물기를 제거해주세요.\n\nSTEP 3\n방울토마토와 양파는 얇은 링으로 썰어주세요.\n\nSTEP 4\n달군 팬에 약간의 올리브유를 두르고 닭가슴살의 표면을 노릇하게 구운 후, 약불로 줄이고 뚜껑을 닫아 10~12분 정도 은근히 구워 속까지 익혀주세요.\n\nSTEP 5\n볼에 드레싱 재료를 넣고 섞어주세요. 접시에 잎채소를 담은 후, 구워놓은 닭가슴살을 먹기 좋게 잘라 올리고 드레싱을 뿌려주세요.</string>
    <string name="salmon_salad">STEP 1\n닭가슴살은 우유에 10분 정도 담가두었다가 건져 낸 후, 물에 헹궈 물기를 제거하고 밑간 재료에 10분간 재워주세요.\n\nSTEP 2\n로메인과 라디치오는 먹기 좋은 크기로 자르고, 찬물에 담갔다가 물기를 제거해주세요.\n\nSTEP 3\n방울토마토와 양파는 얇은 링으로 썰어주세요.\n\nSTEP 4\n달군 팬에 약간의 올리브유를 두르고 닭가슴살의 표면을 노릇하게 구운 후, 약불로 줄이고 뚜껑을 닫아 10~12분 정도 은근히 구워 속까지 익혀주세요.\n\nSTEP 5\n볼에 드레싱 재료를 넣고 섞어주세요. 접시에 잎채소를 담은 후, 구워놓은 닭가슴살을 먹기 좋게 잘라 올리고 드레싱을 뿌려주세요.</string>
    <string name="kimchi_fried_rice">STEP 1\n닭가슴살은 우유에 10분 정도 담가두었다가 건져 낸 후, 물에 헹궈 물기를 제거하고 밑간 재료에 10분간 재워주세요.\n\nSTEP 2\n로메인과 라디치오는 먹기 좋은 크기로 자르고, 찬물에 담갔다가 물기를 제거해주세요.\n\nSTEP 3\n방울토마토와 양파는 얇은 링으로 썰어주세요.\n\nSTEP 4\n달군 팬에 약간의 올리브유를 두르고 닭가슴살의 표면을 노릇하게 구운 후, 약불로 줄이고 뚜껑을 닫아 10~12분 정도 은근히 구워 속까지 익혀주세요.\n\nSTEP 5\n볼에 드레싱 재료를 넣고 섞어주세요. 접시에 잎채소를 담은 후, 구워놓은 닭가슴살을 먹기 좋게 잘라 올리고 드레싱을 뿌려주세요.</string>


</resources>