<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="5dp"
        android:numColumns="4"
        android:orientation="horizontal"
        android:verticalSpacing="5dp">

        <LinearLayout
            android:id="@+id/fish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="98dp"
                android:maxHeight="98dp"
                android:src="@drawable/fish" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fish" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="98dp"
                android:maxHeight="98dp"
                android:src="@drawable/nuts" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuts" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/fruit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruit" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/sauce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/sauce"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sauce" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="5dp"
        android:numColumns="4"
        android:orientation="horizontal"
        android:verticalSpacing="5dp">

        <LinearLayout
            android:id="@+id/egg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/egg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/egg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/grain"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grain" />
        </LinearLayout>

         <LinearLayout
             android:id="@+id/drink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/drink"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/drink" />
         </LinearLayout>

        <LinearLayout
            android:id="@+id/veggie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="98dp"
                android:maxWidth="98dp"
                android:adjustViewBounds="true"
                android:src="@drawable/veggie"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veggie" />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="5dp"
            android:numColumns="4"
            android:orientation="horizontal"
            android:verticalSpacing="5dp">

            <LinearLayout
                android:id="@+id/meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="98dp"
                    android:maxWidth="98dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/meat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="98dp"
                    android:maxWidth="98dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/alcohol"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="98dp"
                    android:maxWidth="98dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/milk"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milk" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="98dp"
                    android:maxWidth="98dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/cheese"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
